--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "nuxt": "^3.13.0",
     "sass": "^1.69.7",
