--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
 	},
 	"devDependencies": {
 		"@nuxt/image": "^1.8.0",
-		"typescript": "^5.6.2",
+		"@nuxtjs/eslint-config-typescript": "^12.1.0",
 		"@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-		"nuxt": "^3.13.2",
+		"@typescript-eslint/eslint-plugin": "^8.14.0",
+		"@typescript-eslint/parser": "^8.14.0",
+		"eslint": "^9.14.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-vue": "^9.31.0",
+		"nuxi": "^3.15.0",
+		"nuxt": "^3.14.159",
 		"sass": "^1.69.7",
+		"typescript": "^5.6.2",
 		"vue": "^3.4.10",
 		"vue-router": "^4.2.5"
 	},
