--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@nuxt/eslint": "^0.6.1",
 		"@nuxt/image": "^1.8.0",
 		"@nuxtjs/eslint-config-typescript": "^12.1.0",
 		"@pinia-plugin-persistedstate/nuxt": "^1.2.0",
@@ -22,13 +23,14 @@
 		"nuxi": "^3.15.0",
 		"nuxt": "^3.14.159",
 		"sass": "^1.69.7",
-		"typescript": "^5.6.2",
+		"typescript": "^5.6.3",
 		"vue": "^3.4.10",
 		"vue-router": "^4.2.5"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^0.8.1",
 		"@nuxt/ui": "3.0.0-alpha.5",
+		"@nuxtjs/eslint-module": "^4.1.0",
 		"@pinia/nuxt": "^0.5.1"
 	}
 }
