--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@nuxt/eslint": "^0.6.1",
 		"@nuxt/image": "^1.8.0",
 		"@nuxtjs/eslint-config-typescript": "^12.1.0",
+		"@nuxtjs/storybook": "7.0.2",
 		"@pinia-plugin-persistedstate/nuxt": "^1.2.0",
 		"@typescript-eslint/eslint-plugin": "^8.14.0",
 		"@typescript-eslint/parser": "^8.14.0",
@@ -25,7 +26,8 @@
 		"sass": "^1.69.7",
 		"typescript": "^5.6.3",
 		"vue": "^3.4.10",
-		"vue-router": "^4.2.5"
+		"vue-router": "^4.2.5",
+		"@types/node": "^18.17.5"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^0.8.1",
