--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
 		"sass": "^1.69.7",
 		"typescript": "^5.6.3",
 		"vue": "^3.4.10",
-		"vue-router": "^4.2.5",
-		"@types/node": "^22.10.0"
+		"vue-router": "^4.2.5"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^0.8.1",
 		"@nuxt/ui": "3.0.0-alpha.9",
 		"@nuxtjs/eslint-module": "^4.1.0",
+		"@nuxtjs/i18n": "9.0.0-rc.2",
 		"@pinia/nuxt": "^0.5.1"
 	}
 }
