--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@nuxt/ui": "3.0.0-alpha.9",
 		"@nuxtjs/eslint-module": "^4.1.0",
 		"@nuxtjs/i18n": "9.0.0-rc.2",
-		"@pinia/nuxt": "^0.5.1"
+		"@pinia/nuxt": "^0.5.1",
+		"zod": "^3.23.8"
 	}
 }
