--- a/package.json
+++ b/package.json
@@ -10,29 +10,21 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@nuxt/eslint": "^0.6.2",
-		"@nuxt/image": "^1.8.1",
-		"@nuxtjs/eslint-config-typescript": "^12.1.0",
-		"@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-		"@typescript-eslint/eslint-plugin": "^8.19.1",
-		"@typescript-eslint/parser": "^8.19.1",
-		"eslint": "^9.17.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.2.1",
-		"eslint-plugin-vue": "^9.32.0",
-		"nuxi": "^3.18.2",
-		"nuxt": "^3.15.1",
-		"sass": "^1.83.1",
-		"typescript": "^5.7.2",
+		"@nuxt/image": "^1.10.0",
+		"nuxi": "^3.25.0",
+		"nuxt": "^3.16.2",
+		"sass": "^1.86.3",
+		"typescript": "^5.8.3",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^0.8.2",
-		"@nuxt/ui": "3.0.0-alpha.10",
-		"@nuxtjs/eslint-module": "^4.1.0",
-		"@nuxtjs/i18n": "9.0.0-rc.2",
+		"@intlify/message-compiler": "^11.1.3",
+		"@nuxt/ui": "3.0.2",
+		"@nuxtjs/i18n": "9.5.3",
 		"@pinia/nuxt": "^0.5.5",
-		"zod": "^3.24.1"
+		"pinia-plugin-persistedstate": "^4.2.0",
+		"zod": "^3.24.3"
 	}
 }
