--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@nuxt/eslint": "1.3.0",
+		"eslint": "^9.0.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"@nuxt/image": "^1.10.0",
 		"nuxi": "^3.25.0",
 		"nuxt": "^3.16.2",
@@ -23,7 +27,7 @@
 		"@intlify/message-compiler": "^11.1.3",
 		"@nuxt/ui": "3.0.2",
 		"@nuxtjs/i18n": "9.5.3",
-		"@pinia/nuxt": "^0.5.5",
+		"@pinia/nuxt": "^0.9.0",
 		"pinia-plugin-persistedstate": "^4.2.0",
 		"zod": "^3.24.3"
 	}
