--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"nuxt": "^3.16.2",
 		"sass": "^1.86.3",
 		"typescript": "^5.8.3",
+		"@vue/language-server": "2.2.10",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
 	},
@@ -27,7 +28,7 @@
 		"@intlify/message-compiler": "^11.1.3",
 		"@nuxt/ui": "3.0.2",
 		"@nuxtjs/i18n": "9.5.3",
-		"@pinia/nuxt": "^0.9.0",
+		"@pinia/nuxt": "^0.11.0",
 		"pinia-plugin-persistedstate": "^4.2.0",
 		"zod": "^3.24.3"
 	}
