--- a/.prettierrc
+++ b/.prettierrc
@@ -2,4 +2,12 @@
 	"plugins": ["prettier-plugin-tailwindcss"],
 	tabWidth: 4,
 	useTabs: true,
+	"overrides": [
+		{
+			"files": "*.ts",
+			"options": {
+				"parser": "typescript"
+			}
+		}
+	]
 }
