--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
 	},
 	"devDependencies": {
 		"@nuxt/eslint": "1.3.0",
+		"@nuxtjs/supabase": "1.5.0",
+		"@vue/language-server": "2.2.10",
 		"eslint": "^9.0.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"@nuxt/image": "^1.10.0",
 		"nuxi": "^3.25.0",
 		"nuxt": "^3.16.2",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"sass": "^1.86.3",
 		"typescript": "^5.8.3",
-		"@vue/language-server": "2.2.10",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
 	},
