--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@iconify-json/heroicons": "^1.2.2",
 		"@nuxt/eslint": "1.3.0",
 		"@nuxtjs/supabase": "1.5.0",
 		"@vue/language-server": "2.2.10",
