--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@iconify-json/heroicons": "^1.2.2",
-		"@nuxt/eslint": "1.3.0",
-		"@nuxtjs/supabase": "1.5.0",
-		"@vue/language-server": "2.2.10",
-		"eslint": "^9.0.0",
-		"nuxi": "^3.25.0",
-		"nuxt": "^3.16.2",
+		"eslint": "^9.26.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass": "^1.86.3",
-		"typescript": "^5.8.3",
 		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
+		"vue-router": "^4.5.1",
+		"nuxt": "^3.17.2",
+		"nuxi": "^3.25.0",
+		"@vue/language-server": "^2.2.10",
+		"@nuxt/eslint": "^1.3.0",
+		"sass": "^1.87.0",
+		"typescript": "^5.8.3",
+		"@iconify-json/heroicons": "^1.2.2",
+		"@nuxtjs/supabase": "^1.5.0"
 	},
 	"dependencies": {
-		"@formkit/auto-animate": "^0.8.2",
-		"@intlify/message-compiler": "^11.1.3",
-		"@nuxt/ui": "3.0.2",
-		"@nuxtjs/i18n": "9.5.3",
+		"@nuxt/ui": "^3.1.1",
 		"@pinia/nuxt": "^0.11.0",
 		"pinia-plugin-persistedstate": "^4.2.0",
-		"zod": "^3.24.3"
+		"@formkit/auto-animate": "^0.8.2",
+		"@nuxtjs/i18n": "^9.5.4",
+		"@intlify/message-compiler": "^11.1.3",
+		"zod": "^3.24.4"
 	}
 }
