--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-	"plugins": ["prettier-plugin-tailwindcss"],
-	tabWidth: 4,
-	useTabs: true,
+	"tabWidth": 4,
+	"useTabs": true,
 	"overrides": [
 		{
 			"files": "*.ts",
