--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
 		"@iconify-json/heroicons": "^1.2.2",
 		"tailwindcss": "^4.1.5",
 		"postcss": "^8.5.3",
-		"autoprefixer": "^10.4.21",
-		"@nuxtjs/supabase": "^1.5.0"
+		"autoprefixer": "^10.4.21"
 	},
 	"dependencies": {
 		"@nuxt/ui": "^3.1.1",
@@ -35,7 +34,6 @@
 		"@formkit/auto-animate": "^0.8.2",
 		"@nuxtjs/i18n": "^9.5.4",
 		"@intlify/message-compiler": "^11.1.3",
-		"zod": "^3.24.4",
 		"@nuxt/content": "^3.5.1"
 	}
 }
