--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "nuxt-app",
 	"private": true,
 	"type": "module",
+	"packageManager": "npm@9.8.1",
 	"scripts": {
 		"build": "nuxt build",
 		"dev": "nuxt dev",
