--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "nuxt-app",
 	"private": true,
 	"type": "module",
-	"packageManager": "npm@9.8.1",
 	"scripts": {
 		"build": "nuxt build",
 		"dev": "nuxt dev",
@@ -11,31 +10,32 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@iconify-json/heroicons": "^1.2.2",
-		"@nuxt/eslint": "^1.3.0",
-		"@nuxt/kit": "^3.17.2",
+		"eslint": "^9.29.0",
+		"prettier": "^3.6.0",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"vue": "^3.5.17",
+		"vue-router": "^4.5.1",
+		"nuxt": "^3.17.5",
+		"@nuxt/kit": "^3.17.5",
+		"nuxi": "^3.25.1",
 		"@vue/language-server": "^2.2.10",
-		"autoprefixer": "^10.4.21",
-		"eslint": "^9.26.0",
-		"nuxi": "^3.25.0",
-		"nuxt": "^3.17.2",
-		"postcss": "^8.5.3",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass": "^1.87.0",
-		"tailwindcss": "^4.1.5",
+		"@nuxt/eslint": "^1.4.1",
+		"sass": "^1.89.2",
 		"typescript": "^5.8.3",
-		"vue": "^3.5.13",
-		"vue-router": "^4.5.1"
+		"@iconify-json/heroicons": "^1.2.2",
+		"tailwindcss": "^4.1.10",
+		"postcss": "^8.5.6",
+		"autoprefixer": "^10.4.21",
+		"@nuxtjs/supabase": "^1.5.2"
 	},
 	"dependencies": {
+		"@nuxt/ui": "^3.1.3",
+		"@pinia/nuxt": "^0.11.1",
+		"pinia-plugin-persistedstate": "^4.3.0",
 		"@formkit/auto-animate": "^0.8.2",
-		"@intlify/message-compiler": "^11.1.3",
-		"@nuxt/content": "^3.5.1",
-		"@nuxt/ui": "^3.1.1",
-		"@nuxtjs/i18n": "^9.5.4",
-		"@pinia/nuxt": "^0.11.0",
-		"better-sqlite3": "^11.10.0",
-		"pinia-plugin-persistedstate": "^4.2.0"
+		"@nuxtjs/i18n": "^9.5.5",
+		"@intlify/message-compiler": "^11.1.7",
+		"zod": "^3.25.67",
+		"@nuxt/content": "^3.6.1"
 	}
 }
