--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"eslint": "^9.26.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"vue": "^3.5.13",
-		"vue-router": "^4.5.1",
-		"nuxt": "^3.17.2",
-		"@nuxt/kit": "^3.17.2",
-		"nuxi": "^3.25.0",
-		"@vue/language-server": "^2.2.10",
-		"@nuxt/eslint": "^1.3.0",
-		"sass": "^1.87.0",
-		"typescript": "^5.8.3",
 		"@iconify-json/heroicons": "^1.2.2",
-		"tailwindcss": "^4.1.5",
-		"postcss": "^8.5.3",
+		"@nuxt/eslint": "^1.4.1",
+		"@nuxt/kit": "^3.17.5",
+		"@nuxtjs/supabase": "^1.5.2",
+		"@vue/language-server": "^2.2.10",
 		"autoprefixer": "^10.4.21",
-		"@nuxtjs/supabase": "^1.5.0"
+		"eslint": "^9.29.0",
+		"nuxi": "^3.25.1",
+		"nuxt": "^3.17.5",
+		"postcss": "^8.5.6",
+		"prettier": "^3.6.0",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"sass": "^1.89.2",
+		"tailwindcss": "^4.1.10",
+		"typescript": "^5.8.3",
+		"vue": "^3.5.17",
+		"vue-router": "^4.5.1"
 	},
 	"dependencies": {
-		"@nuxt/ui": "^3.1.1",
-		"@pinia/nuxt": "^0.11.0",
-		"pinia-plugin-persistedstate": "^4.2.0",
 		"@formkit/auto-animate": "^0.8.2",
-		"@nuxtjs/i18n": "^9.5.4",
-		"@intlify/message-compiler": "^11.1.3",
-		"zod": "^3.24.4",
-		"@nuxt/content": "^3.5.1"
+		"@intlify/message-compiler": "^11.1.7",
+		"@nuxt/content": "^3.6.1",
+		"@nuxt/ui": "^3.1.3",
+		"@nuxtjs/i18n": "^9.5.5",
+		"@pinia/nuxt": "^0.11.1",
+		"better-sqlite3": "^12.1.0",
+		"pinia-plugin-persistedstate": "^4.3.0",
+		"zod": "^3.25.67"
 	}
 }
