--- a/package.json
+++ b/package.json
@@ -10,33 +10,32 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@iconify-json/heroicons": "^1.2.2",
-		"@nuxt/eslint": "^1.4.1",
-		"@nuxt/kit": "^3.17.5",
-		"@nuxtjs/supabase": "^1.5.2",
-		"@vue/language-server": "^2.2.10",
+		"@iconify-json/heroicons": "^1.2.3",
+		"@iconify-json/lucide": "^1.2.68",
+		"@nuxt/eslint": "^1.9.0",
+		"@nuxt/kit": "^4.1.2",
+		"@nuxtjs/supabase": "^2.0.0",
+		"@vue/language-server": "^3.1.0",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^9.29.0",
-		"nuxi": "^3.25.1",
-		"nuxt": "^3.17.5",
+		"eslint": "^9.36.0",
+		"nuxt": "^4.1.2",
 		"postcss": "^8.5.6",
-		"prettier": "^3.6.0",
-		"prettier-plugin-tailwindcss": "^0.6.13",
-		"sass": "^1.89.2",
-		"tailwindcss": "^4.1.10",
-		"typescript": "^5.8.3",
-		"vue": "^3.5.17",
+		"prettier": "^3.6.2",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"sass": "^1.93.2",
+		"tailwindcss": "^4.1.13",
+		"typescript": "^5.9.3",
+		"vue": "^3.5.22",
 		"vue-router": "^4.5.1"
 	},
 	"dependencies": {
-		"@formkit/auto-animate": "^0.8.2",
-		"@intlify/message-compiler": "^11.1.7",
-		"@nuxt/content": "^3.6.1",
-		"@nuxt/ui": "^3.1.3",
-		"@nuxtjs/i18n": "^9.5.5",
-		"@pinia/nuxt": "^0.11.1",
-		"better-sqlite3": "^11.10.0",
-		"pinia-plugin-persistedstate": "^4.3.0",
-		"zod": "^3.25.67"
+		"@formkit/auto-animate": "^0.9.0",
+		"@intlify/message-compiler": "^11.1.12",
+		"@nuxt/content": "^3.7.1",
+		"@nuxt/ui": "^4.0.0",
+		"@nuxtjs/i18n": "^10.1.0",
+		"@pinia/nuxt": "^0.11.2",
+		"pinia-plugin-persistedstate": "^4.5.0",
+		"zod": "^4.1.11"
 	}
 }
