fix: correct session handling and navigation flow in auth composable
Updated the auth composable to use useSupabaseSession() instead of useSupabaseUser() for proper session management. Fixed navigation functions to return promises instead of using async/await incorrectly. Also updated SignOutButton to properly handle async signout and improved responsive layout in AuthForm and AppNavigation components.

Added support for cross-platform release using Capacitor.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"vue-router": "^4.5.1"
 	},
 	"dependencies": {
+		"@capacitor/android": "^7.4.4",
+		"@capacitor/cli": "^7.4.4",
+		"@capacitor/core": "^7.4.4",
 		"@formkit/auto-animate": "^0.9.0",
 		"@intlify/message-compiler": "^11.1.12",
 		"@nuxt/content": "^3.7.1",
