--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@iconify-json/heroicons": "^1.2.3",
-		"@iconify-json/lucide": "^1.2.68",
-		"@nuxt/eslint": "^1.9.0",
-		"@nuxt/kit": "^4.1.2",
-		"@nuxtjs/supabase": "^2.0.0",
-		"@vue/language-server": "^3.1.0",
-		"autoprefixer": "^10.4.21",
-		"eslint": "^9.36.0",
-		"nuxt": "^4.1.2",
-		"postcss": "^8.5.6",
+		"eslint": "^9.39.1",
 		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.6.14",
-		"sass": "^1.93.2",
-		"tailwindcss": "^4.1.13",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"vue": "^3.5.24",
+		"vue-router": "^4.6.3",
+		"nuxt": "^4.2.1",
+		"@nuxt/kit": "^4.2.1",
+		"nuxi": "^3.30.0",
+		"@vue/language-server": "^3.1.3",
+		"@nuxt/eslint": "^1.10.0",
+		"sass": "^1.94.0",
 		"typescript": "^5.9.3",
-		"vue": "^3.5.22",
-		"vue-router": "^4.5.1"
+		"@iconify-json/heroicons": "^1.2.3",
+		"tailwindcss": "^4.1.17",
+		"postcss": "^8.5.6",
+		"autoprefixer": "^10.4.22",
+		"@nuxtjs/supabase": "^2.0.1"
 	},
 	"dependencies": {
-		"@capacitor/android": "^7.4.4",
+		"@nuxt/ui": "^4.1.0",
+		"@pinia/nuxt": "^0.11.3",
+		"pinia-plugin-persistedstate": "^4.7.1",
+		"@formkit/auto-animate": "^0.9.0",
+		"@nuxtjs/i18n": "^10.2.0",
+		"@intlify/message-compiler": "^11.1.12",
+		"zod": "^4.1.12",
+		"@nuxt/content": "^3.8.0",
 		"@capacitor/cli": "^7.4.4",
 		"@capacitor/core": "^7.4.4",
-		"@formkit/auto-animate": "^0.9.0",
-		"@intlify/message-compiler": "^11.1.12",
-		"@nuxt/content": "^3.7.1",
-		"@nuxt/ui": "^4.0.0",
-		"@nuxtjs/i18n": "^10.1.0",
-		"@pinia/nuxt": "^0.11.2",
-		"pinia-plugin-persistedstate": "^4.5.0",
-		"zod": "^4.1.11"
+		"@capacitor/android": "^7.4.4"
 	}
 }
